--- a/app/Resources/views/admin/categories/create.html.twig
+++ b/app/Resources/views/admin/categories/create.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container body-content span=8 offset=2">
         <div class="well">
-            <form class="form-horizontal" action="{{ path('category_create') }}" method="post">
+            <form class="form-horizontal" enctype="multipart/form-data" action="{{ path('admin_category_create') }}" method="post">
                 <fieldset>
                     <legend>Create Category</legend>
 
@@ -12,6 +12,13 @@
                         <label class="col-sm-4 control-label" for="category_name">Name</label>
                         <div class="col-sm-4 ">
                             <input type="text" class="form-control" id="category_name" placeholder="Name" name="category[name]" required>
+                        </div>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="category_description">Description</label>
+                        <div class="col-sm-4 ">
+                            <input type="text" class="form-control" id="category_description" placeholder="Description" name="category[description]" required>
                         </div>
                     </div>
 
@@ -30,9 +37,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="category_image">Image URL</label>
+                        <label class="col-sm-4 control-label" for="category_image">Upload Image</label>
                         <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="category_image" placeholder="Image URL" name="category[imageURL]" required>
+                            <input accept=".jpg, .jpeg" type="file" class="form-control" id="category_image" placeholder="Upload Image" name="category[image]" required>
                         </div>
                     </div>
 
