--- a/app/Resources/views/admin/categories/delete.html.twig
+++ b/app/Resources/views/admin/categories/delete.html.twig
@@ -9,33 +9,32 @@
                     <legend>Delete Category</legend>
 
                 <div class="form-group">
-                    <label class="col-sm-4 control-label" for="article_title">Category Name</label>
+                    <label class="col-sm-4 control-label" for="category_name">Category Name</label>
                     <div class="col-sm-4 ">
-                        <input type="text" class="form-control" id="article_title" placeholder="Category Name" name="category[name]" value="{{ category.name }}" disabled>
+                        <input type="text" class="form-control" id="category_name" placeholder="Category Name" name="category[name]" value="{{ category.name }}" disabled>
                     </div>
                 </div>
+                
+                <div class="form-group">
+                        <label class="col-sm-4 control-label" for="category_description">Description</label>
+                        <div class="col-sm-4 ">
+                            <input type="text" class="form-control" id="category_description" placeholder="Description" name="category[description]" value="{{ category.description }}" disabled>
+                        </div>
+                    </div>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="article_title">Beds</label>
+                        <label class="col-sm-4 control-label" for="category_beds">Beds</label>
                         <div class="col-sm-4 ">
                             <input type="number" class="form-control" id="category_beds" placeholder="Category Beds" name="category[beds]" value="{{ category.beds }}" disabled>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="article_title">Price</label>
+                        <label class="col-sm-4 control-label" for="category_price">Price</label>
                         <div class="col-sm-4 ">
                             <input type="number" class="form-control" id="category_price" placeholder="Category Price" name="category[price]" value="{{ category.price }}" disabled>
                         </div>
                     </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="article_title">Image URL</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="category_image" placeholder="Image URL" name="category[imageURL]" value="{{ category.imageURL }}" disabled>
-                        </div>
-                    </div>
-
 
                 {{ form_row(form._token) }}
                 <div class="form-group">
