--- a/app/Resources/views/admin/categories/edit.html.twig
+++ b/app/Resources/views/admin/categories/edit.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container body-content span=8 offset=2">
         <div class="well">
-            <form class="form-horizontal" action="{{ path('admin_category_edit', {'id': category.id}) }}" method="POST">
+            <form class="form-horizontal" enctype="multipart/form-data" action="{{ path('admin_category_edit', {'id': category.id}) }}" method="POST">
                 <fieldset>
                     <legend>Edit Category</legend>
 
@@ -12,7 +12,15 @@
                         <label class="col-sm-4 control-label"
                                for="article_title">Category Name</label>
                         <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="article_title" placeholder="Category Name" name="category[name]" value="{{ category.name }}">
+                            <input type="text" class="form-control" id="category_name" placeholder="Category Name" name="category[name]" value="{{ category.name }}">
+                        </div>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label"
+                               for="article_title">Description</label>
+                        <div class="col-sm-4 ">
+                            <input type="text" class="form-control" id="category_description" placeholder="Description" name="category[description]" value="{{ category.description }}">
                         </div>
                     </div>
 
@@ -31,9 +39,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="category_image">Image URL</label>
+                        <label class="col-sm-4 control-label" for="category_image">Upload Image</label>
                         <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="category_image" placeholder="Image URL" name="category[imageURL]" value="{{ category.imageURL }}">
+                            <input accept=".jpg, .jpeg" type="file" class="form-control" id="category_image" placeholder="Upload Image" name="category[image]">
                         </div>
                     </div>
 
