--- a/app/Resources/views/admin/bookings/list.html.twig
+++ b/app/Resources/views/admin/bookings/list.html.twig
@@ -5,13 +5,14 @@
     <div class="container body-content">
         <div class="well">
             <h2>All Booking -
-                <a href="{{ path('booking_create') }}" class="btn btn-warning">Create New</a>
+                <a href="{{ path('booking_create') }}" class="btn btn-danger">Create New</a>
             </h2>
             <div class="row">
                 <table class="table table-striped table-hover ">
                     <thead>
                     <tr>
                         <th>#</th>
+                        <th>Date Added</th>
                         <th>Checkin</th>
                         <th>Checkout</th>
                         <th>Status</th>
@@ -20,10 +21,9 @@
                     </thead>
                     <tbody>
                     {% for booking in bookings %}
-
-                        <tr>
                         <tr>
                             <td>{{ booking.id }}</td>
+                            <td>{{ booking.dateAdded|date("Y-m-d H:i:s") }}</td>
                             <td>{{ booking.checkin|date("Y-m-d") }}</td>
                             <td>{{ booking.checkout|date("Y-m-d") }}</td>
                             <td>{{ booking.status }}</td>
