--- a/app/Resources/views/admin/categories/list.html.twig
+++ b/app/Resources/views/admin/categories/list.html.twig
@@ -5,7 +5,7 @@
 <div class="container body-content">
     <div class="well">
         <h2>All Categories -
-            <a href="{{ path('admin_category_create') }}" class="btn btn-warning">Create New</a>
+            <a href="{{ path('admin_category_create') }}" class="btn btn-danger">Create New</a>
         </h2>
         <div class="row">
             <table class="table table-striped table-hover ">
@@ -26,6 +26,7 @@
                         <td>{{ category.beds }}</td>
                         <td>{{ category.price }}</td>
                         <td>
+                            <a href="{{ path('admin_category_view', {id: category.id}) }}">View</a>
                             <a href="{{ path('admin_category_edit', {id: category.id}) }}">Edit</a>
                             <a href="{{ path('admin_category_delete', {id: category.id}) }}">Delete</a>
                         </td>
