--- a/app/Resources/views/users/myBookings.html.twig
+++ b/app/Resources/views/users/myBookings.html.twig
@@ -3,17 +3,35 @@
 {% block body %}
 
     <div class="container body-content">
-        <h1>My Bookings</h1>
-        <hr />
-        <div class="row">
-            {% for booking in bookings %} 
-                <div class="col-md-12">
-                    <h4>Booking {{ booking.id }}</h4> 
-                    <p>Checkin: {{ booking.checkin|date("Y-m-d") }} | Checkout: {{ booking.checkout|date("Y-m-d") }}</p>
-                    <hr />   
-                </div>
-            {% endfor %}
+        <div class="well">
+            <h2>All Booking -
+                <a href="{{ path('booking_create') }}" class="btn btn-danger">Create New</a>
+            </h2>
+            <div class="row">
+                <table class="table table-striped table-hover ">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Date Added</th>
+                        <th>Checkin</th>
+                        <th>Checkout</th>
+                        <th>Status</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for booking in bookings %}
+                        <tr>
+                            <td>{{ booking.id }}</td>
+                            <td>{{ booking.dateAdded|date("Y-m-d H:i:s") }}</td>
+                            <td>{{ booking.checkin|date("Y-m-d") }}</td>
+                            <td>{{ booking.checkout|date("Y-m-d") }}</td>
+                            <td>{{ booking.status }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-
+    
 {% endblock %}
