--- a/app/Resources/views/users/profile.html.twig
+++ b/app/Resources/views/users/profile.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="container">
+    <div class="container body-content text-center">
         <h1>Hello {{ user.email }}</h1>
         <h3>Login Name: {{ user.loginName }}</h3>
     </div>
