--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -2,6 +2,10 @@
 body {
     background: #f0f0f0;
 }
+.body-content {
+    margin-top: 4em;
+    margin-bottom: 2em;
+}
 /* html, body end */
 
 /* nav */
