move Controllers in Admin folder

--- a/app/Resources/views/admin/statuses/create.html.twig
+++ b/app/Resources/views/admin/statuses/create.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container body-content span=8 offset=2">
         <div class="well">
-            <form class="form-horizontal" action="{{ path('status_create') }}" method="post">
+            <form class="form-horizontal" action="{{ path('admin_status_create') }}" method="post">
                 <fieldset>
                     <legend>Create Status</legend>
 
@@ -18,7 +18,7 @@
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
                             {#<a class="btn btn-default" href="{{ path('hotel_index') }}">Cancel</a>#}
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
 
