--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,17 +36,17 @@
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="{{ path('admin_categories') }}">Categories</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{{ path('payment_create') }}">Payments</a>
+                                        <a class="dropdown-item" href="{{ path('admin_guest_create') }}">Guests</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{{ path('room_create') }}">Rooms</a>
+                                        <a class="dropdown-item" href="{{ path('admin_payment_create') }}">Payments</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{{ path('status_create') }}">Statuses</a>
+                                        <a class="dropdown-item" href="{{ path('admin_room_create') }}">Rooms</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="{{ path('admin_status_create') }}">Statuses</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="{{ path('admin_stay_create') }}">Stays</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="{{ path('admin_users') }}">Users</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{{ path('guest_create') }}">Guests</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{{ path('stay_create') }}">Stays</a>
                                     </div>
                                 </li>
                             {% endif %}
