--- a/app/Resources/views/admin/categories/create.html.twig
+++ b/app/Resources/views/admin/categories/create.html.twig
@@ -45,8 +45,8 @@
 
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
-                            {#<a class="btn btn-default" href="{{ path('hotel_index') }}">Cancel</a>#}
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <a class="btn btn-primary" href="{{ path('admin_categories') }}">Cancel</a>
+                            <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
 
