--- a/app/Resources/views/admin/categories/view.html.twig
+++ b/app/Resources/views/admin/categories/view.html.twig
@@ -12,7 +12,7 @@
                 <p>{{ category.description }}</</p>
                 <p>Beds: {{ category.beds }}</p>
                 <p>Price: {{ category.price }}
-                <p><a class="btn btn-primary btn-xs" href="{{ path('admin_categories') }}">Back &raquo;</a></p>
+                <p><a class="btn btn-danger btn-xs" href="{{ path('admin_categories') }}">Back &raquo;</a></p>
             </div>
         </div>
     </div
