--- a/app/Resources/views/admin/guests/create.html.twig
+++ b/app/Resources/views/admin/guests/create.html.twig
@@ -9,7 +9,7 @@
                     {{ msg }}
                 </div>
             {% endfor %}
-            <form class="form-horizontal" action="{{ path('guest_create') }}" method="post">
+            <form class="form-horizontal" action="{{ path('admin_guest_create') }}" method="post">
                 <fieldset>
                     <legend>Create Guest</legend>
                     <div class="form-group">
@@ -50,7 +50,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
                     {{  form_row(form._token) }}
