--- a/app/Resources/views/admin/stays/create.html.twig
+++ b/app/Resources/views/admin/stays/create.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container body-content span=8 offset=2">
         <div class="well">
-            <form class="form-horizontal" action="{{ path('stay_create') }}" method="post">
+            <form class="form-horizontal" action="{{ path('admin_stay_create') }}" method="post">
                 <fieldset>
                     <legend>Create Stay</legend>
                     <div class="form-group">
@@ -28,7 +28,7 @@
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
                             {#<a class="btn btn-default" href="{{ path('hotel_index') }}">Cancel</a>#}
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
                     {{  form_row(form._token) }}
