--- a/app/Resources/views/admin/categories/edit.html.twig
+++ b/app/Resources/views/admin/categories/edit.html.twig
@@ -48,8 +48,8 @@
                     {{ form_row(form._token) }}
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
-                            <a class="btn btn-default" href="{{ path('admin_categories') }}">Cancel</a>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <a class="btn btn-primary" href="{{ path('admin_categories') }}">Cancel</a>
+                            <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
                 </fieldset>
