--- a/app/Resources/views/users/myBookings.html.twig
+++ b/app/Resources/views/users/myBookings.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
 
     <div class="container body-content">
+        <h4>User: {{ app.user.loginName }}</h4>
         <div class="well">
             <h2>All Booking -
                 <a href="{{ path('booking_create') }}" class="btn btn-danger">Create New</a>
