add Services for Stay, Room, Guest, Status, Payment

--- a/app/Resources/views/admin/bookings/edit.html.twig
+++ b/app/Resources/views/admin/bookings/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="container body-content span=8 offset=2">
+    <div class="container body-content">
         <div class="well">
             <form class="form-horizontal" action="{{ path('admin_booking_edit', {id: booking.id}) }}" method="post">
                 <fieldset>
