--- a/app/Resources/views/admin/statuses/edit.html.twig
+++ b/app/Resources/views/admin/statuses/edit.html.twig
@@ -4,25 +4,22 @@
 
     <div class="container body-content">
         <div class="well">
-            <form class="form-horizontal" action="{{ path('admin_payment_create') }}" method="post">
+            <form class="form-horizontal" action="{{ path('admin_status_edit', {'id': status.id}) }}" method="POST">
                 <fieldset>
-                    <legend>Create Payment</legend>
-
+                    <legend>Edit Status</legend>
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="payment_name">Name</label>
+                        <label class="col-sm-4 control-label" for="status_name">Name</label>
                         <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="payment_name" placeholder="Name" name="payment[name]" required>
+                            <input type="text" class="form-control" id="status_name" placeholder="Name" name="status[name]" value="{{ status.name}}">
                         </div>
                     </div>
-
+                    {{ form_row(form._token) }}
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
-                            {#<a class="btn btn-default" href="{{ path('hotel_index') }}">Cancel</a>#}
+                            <a class="btn btn-primary" href="{{ path('admin_statuses') }}">Cancel</a>
                             <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
-
-                    {{  form_row(form._token) }}
                 </fieldset>
             </form>
         </div>
