--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,15 +36,15 @@
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="{{ path('admin_categories') }}">Categories</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{{ path('admin_guest_create') }}">Guests</a>
+                                        <a class="dropdown-item" href="{{ path('admin_guests') }}">Guests</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{{ path('admin_payment_create') }}">Payments</a>
+                                        <a class="dropdown-item" href="{{ path('admin_payments') }}">Payments</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{{ path('admin_room_create') }}">Rooms</a>
+                                        <a class="dropdown-item" href="{{ path('admin_rooms') }}">Rooms</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{{ path('admin_status_create') }}">Statuses</a>
+                                        <a class="dropdown-item" href="{{ path('admin_statuses') }}">Statuses</a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{{ path('admin_stay_create') }}">Stays</a>
+                                        <a class="dropdown-item" href="{{ path('admin_stays') }}">Stays</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="{{ path('admin_users') }}">Users</a>
                                     </div>
