--- a/app/Resources/views/admin/categories/edit.html.twig
+++ b/app/Resources/views/admin/categories/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="container body-content span=8 offset=2">
+    <div class="container body-content">
         <div class="well">
             <form class="form-horizontal" enctype="multipart/form-data" action="{{ path('admin_category_edit', {'id': category.id}) }}" method="POST">
                 <fieldset>
