--- a/app/Resources/views/bookings/create.html.twig
+++ b/app/Resources/views/bookings/create.html.twig
@@ -2,65 +2,53 @@
 
 {% block body %}
 
-    <div class="container body-content span=8 offset=2">
+    <div class="container body-content">
         <div class="well">
             <form class="form-horizontal" action="{{ path('booking_create') }}" method="post">
                 <fieldset>
                     <legend>Create Booking</legend>
-
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_category">Category</label>
                         <div class="col-sm-4">
                             {{ form_widget(form.category) }}
                         </div>
                     </div>
-
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_checkin">Checkin</label>
                         <div class="col-sm-4 ">
                             <input type="date" class="form-control" id="booking_checkin"  name="booking[checkin]" required>
                         </div>
                     </div>
-
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_checkout">Checkout</label>
                         <div class="col-sm-4 ">
                             <input type="date" class="form-control" id="booking_checkout"  name="booking[checkout]" required>
                         </div>
                     </div>
-
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_adults">Adults</label>
                         <div class="col-sm-4 ">
                             <input type="number" class="form-control" id="booking_adults"  name="booking[adults]" required>
                         </div>
                     </div>
-
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_adults">Child Bed</label>
                         <div class="col-sm-4 ">
                             <input type="number" class="form-control" id="booking_childBed"  name="booking[childBed]" required>
                         </div>
                     </div>
-
-
-
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_payment">Payment</label>
                         <div class="col-sm-4">
                             {{ form_widget(form.payment) }}
                         </div>
                     </div>
-
-
-
                     <div class="form-group">
-                        <div class="col-sm-4 col-sm-offset-4">
+                        <div class="col-sm-4">
                             <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
-
-                    {{  form_row(form._token) }}
+                    {{ form_row(form._token) }}
                 </fieldset>
             </form>
         </div>
