--- a/app/Resources/views/categories/view.html.twig
+++ b/app/Resources/views/categories/view.html.twig
@@ -13,9 +13,9 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <h2>{{ category.name }}</h2>
-                <p>{{ category.description }}</</p>
+                <p>{{ category.description }}</p>
                 <p>Beds: {{ category.beds }}</p>
-                <p>Price: {{ category.price }}
+                <p>Price: {{ category.price }}</p>
             </div>
         </div>
     </div>
