--- a/app/Resources/views/users/register.html.twig
+++ b/app/Resources/views/users/register.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <div class="container body-content span=8 offset=2">
+    <div class="container body-content">
         <div class="well">
             {% for msg in app.session.flashbag.get('errors')  %}
                 <div class="alert alert-danger">
@@ -51,7 +51,7 @@
                             <button type="submit" class="btn btn-danger">Register</button>
                         </div>
                     </div>
-                    {{  form_row(form._token) }}
+                    {{ form_row(form._token) }}
                 </fieldset>
             </form>
         </div>
