edit legend text in twig

--- a/app/Resources/views/admin/payments/list.html.twig
+++ b/app/Resources/views/admin/payments/list.html.twig
@@ -4,7 +4,7 @@
 
 <div class="container body-content">
     <div class="well">
-        <h2>All Guests -
+        <h2>All Payments -
             <a href="{{ path('admin_payment_create') }}" class="btn btn-danger">Create New</a>
         </h2>
         <div class="row">
