--- a/app/Resources/views/admin/rooms/list.html.twig
+++ b/app/Resources/views/admin/rooms/list.html.twig
@@ -4,8 +4,8 @@
 
 <div class="container body-content">
     <div class="well">
-        <h2>All Guests -
-            <a href="{{ path('admin_payment_create') }}" class="btn btn-danger">Create New</a>
+        <h2>All Rooms -
+            <a href="{{ path('admin_room_create') }}" class="btn btn-danger">Create New</a>
         </h2>
         <div class="row">
             <table class="table table-striped table-hover">
