--- a/app/Resources/views/admin/stays/edit.html.twig
+++ b/app/Resources/views/admin/stays/edit.html.twig
@@ -5,7 +5,7 @@
     <div class="container body-content">
         <div class="well">
             <form class="form-horizontal" action="{{ path('admin_stay_edit', {'id': stay.id}) }}" method="POST">
-                <legend>Delete Stay</legend>
+                <legend>Edit Stay</legend>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="stay_note">Note</label>
                         <div class="col-sm-4 ">
