--- a/app/Resources/views/admin/bookings/create.html.twig
+++ b/app/Resources/views/admin/bookings/create.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container body-content">
         <div class="well">
-            <form class="form-horizontal" action="{{ path('booking_create') }}" method="post">
+            <form class="form-horizontal" action="{{ path('admin_booking_create') }}" method="post">
                 <fieldset>
                     <legend>Create Booking</legend>
                     <div class="form-group">
