--- a/app/Resources/views/users/myBookings.html.twig
+++ b/app/Resources/views/users/myBookings.html.twig
@@ -6,7 +6,7 @@
         <h4>User: {{ app.user.loginName }}</h4>
         <div class="well">
             <h2>All Booking -
-                <a href="{{ path('booking_create') }}" class="btn btn-danger">Create New</a>
+                <a href="{{ path('user_booking_create') }}" class="btn btn-danger">Create New</a>
             </h2>
             <div class="row">
                 <table class="table table-striped table-hover ">
