add booking_id in Stay Entity

--- a/app/Resources/views/admin/stays/create.html.twig
+++ b/app/Resources/views/admin/stays/create.html.twig
@@ -8,9 +8,15 @@
                 <fieldset>
                     <legend>Create Stay</legend>
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="stay_note">Note</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="stay_note" placeholder="Note" name="stay[note]" required>
+                        <label class="col-sm-4 control-label" for="stay_booking">Booking</label>
+                        <div class="col-sm-4">
+                            {{ form_widget(form.booking) }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="stay_room">Room</label>
+                        <div class="col-sm-4">
+                            {{ form_widget(form.room) }}
                         </div>
                     </div>
                     <div class="form-group">
@@ -20,9 +26,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="stay_room">Room</label>
-                        <div class="col-sm-4">
-                            {{ form_widget(form.room) }}
+                        <label class="col-sm-4 control-label" for="stay_note">Note</label>
+                        <div class="col-sm-4 ">
+                            <input type="text" class="form-control" id="stay_note" placeholder="Note" name="stay[note]" required>
                         </div>
                     </div> 
                     <div class="form-group">
