--- a/app/Resources/views/admin/stays/delete.html.twig
+++ b/app/Resources/views/admin/stays/delete.html.twig
@@ -8,9 +8,9 @@
                 <fieldset>
                     <legend>Delete Stay</legend>
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="stay_note">Note</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="stay_note" placeholder="Note" name="stay[note]" value="{{ stay.note }}" disabled>
+                        <label class="col-sm-4 control-label" for="stay_booking">Booking</label>
+                        <div class="col-sm-4">
+                            {{ form_widget(form.booking) }}
                         </div>
                     </div>
                     <div class="form-group">
@@ -24,7 +24,13 @@
                         <div class="col-sm-4">
                             {{ form_widget(form.room) }}
                         </div>
-                    </div> 
+                    </div>
+                     <div class="form-group">
+                        <label class="col-sm-4 control-label" for="stay_note">Note</label>
+                        <div class="col-sm-4 ">
+                            <input type="text" class="form-control" id="stay_note" name="stay[note]" value="{{ stay.note }}" disabled>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
                             <a class="btn btn-default" href="{{ path('admin_stays') }}">Cancel</a>
