--- a/app/Resources/views/admin/stays/edit.html.twig
+++ b/app/Resources/views/admin/stays/edit.html.twig
@@ -7,9 +7,9 @@
             <form class="form-horizontal" action="{{ path('admin_stay_edit', {'id': stay.id}) }}" method="POST">
                 <legend>Edit Stay</legend>
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="stay_note">Note</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="stay_note" placeholder="Note" name="stay[note]" value="{{ stay.note }}">
+                        <label class="col-sm-4 control-label" for="stay_booking">Booking</label>
+                        <div class="col-sm-4">
+                            {{ form_widget(form.booking) }}
                         </div>
                     </div>
                     <div class="form-group">
@@ -22,6 +22,12 @@
                         <label class="col-sm-4 control-label" for="stay_room">Room</label>
                         <div class="col-sm-4">
                             {{ form_widget(form.room) }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label" for="stay_note">Note</label>
+                        <div class="col-sm-4 ">
+                            <input type="text" class="form-control" id="stay_note" name="stay[note]" value="{{ stay.note }}">
                         </div>
                     </div> 
                     <div class="form-group">
