--- a/app/Resources/views/admin/stays/list.html.twig
+++ b/app/Resources/views/admin/stays/list.html.twig
@@ -12,9 +12,9 @@
                 <thead>
                 <tr>
                     <th>#</th>
+                    <th>Booking</th>
+                    <th>Room / Category</th>
                     <th>Guest</th>
-                    <th>Room Number</th>
-                    <th>Category</th>
                     <th>Note</th>
                     <th>Actions</th>
                 </tr>
@@ -23,9 +23,9 @@
                 {% for stay in stays %}
                     <tr>
                         <td>{{ stay.id }}</td>
+                        <td>{{ stay.booking }}</td>
+                        <td>{{ stay.room.number }} / {{ stay.room.category }} </td>
                         <td>{{ stay.guest }}</td>
-                        <td>{{ stay.room.number }}</td>
-                        <td>{{ stay.room.category }}</td>
                         <td>{{ stay.note }}</td>
                         <td>
                             <a href="{{ path('admin_stay_edit', {id: stay.id}) }}">Edit</a>
