add view one gusest in Guest Controller and link in stay for guest

--- a/app/Resources/views/admin/bookings/view.html.twig
+++ b/app/Resources/views/admin/bookings/view.html.twig
@@ -20,6 +20,6 @@
         <a class="btn btn-success btn-xs" href="{{ path('admin_booking_edit', {id: booking.id}) }}">Edit</a>
         <a class="btn btn-danger btn-xs" href="{{ path('admin_booking_delete', {id: booking.id}) }}">Delete</a>
         <a class="btn btn-primary btn-xs" href="{{ path('admin_bookings') }}">Back &raquo;</a>
-    </div
+    </div>
 
 {% endblock %}
