--- a/app/Resources/views/admin/guests/list.html.twig
+++ b/app/Resources/views/admin/guests/list.html.twig
@@ -32,6 +32,7 @@
                         <td>{{ guest.email }}</td>
                         <td>{{ guest.phone }}</td>
                         <td>
+                            <a href="{{ path('admin_guest_view', {id: guest.id}) }}">View</a>
                             <a href="{{ path('admin_guest_edit', {id: guest.id}) }}">Edit</a>
                             <a href="{{ path('admin_guest_delete', {id: guest.id}) }}">Delete</a>
                         </td>
