--- a/app/Resources/views/admin/guests/view.html.twig
+++ b/app/Resources/views/admin/guests/view.html.twig
@@ -2,12 +2,20 @@
 
 {% block body %}
 
-    <div class="container body-content">
-        <h2>Guest Information</h2>
-        <p>{{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }}</p>
-        <p>Personal Number: {{ guest.personalNumber }}</p>
-        <p>Email: {{ guest.email }}</p>
-        <p>Phone: {{ guest.phone }}</p>
+    <div class="container body-content text-center">
+        <h2>{{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }} {{ guest.personalNumber }}</h2>
+        
+        <h4>Email: {{ guest.email }} | Phone: {{ guest.phone }}</h4>
+        <h2>All stays</h2>
+        {% if stays|length == 0 %} 
+            <p>No result for stays</p>
+        {% endif %} 
+        <hr />
+        {% for stay in stays %}
+            <p>Stay Id: {{ stay.id }} | {{ stay.room }} - {{ stay.room.category }}</p>        
+            <p><a href="{{ path('admin_booking_view', {id: stay.booking.id}) }}">Booking Id: {{ stay.booking }}</a> | Checkin: {{ stay.booking.checkin|date("Y-m-d") }} | Checkout: {{ stay.booking.checkout|date("Y-m-d") }} </p>
+            <hr />
+        {% endfor %}
         <a class="btn btn-success btn-xs" href="{{ path('admin_guest_edit', {id: guest.id}) }}">Edit</a>
         <a class="btn btn-danger btn-xs" href="{{ path('admin_guest_delete', {id: guest.id}) }}">Delete</a>
         <a class="btn btn-primary btn-xs" href="{{ path('admin_guests') }}">Back &raquo;</a>
