--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -66,7 +66,7 @@
                                 <h4>Summer 2021 in Hotel & SPA</h4>
                                 <p>June 2021 - July 2021</p>
                                 <p>Early bookings with up to -25% discount</p>
-                                <p><a href="offers.html" style="">See More</a></p>
+                                <p><a href="{{ path('view_offers') }}">See More</a></p>
                             </div>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                         <hr/>
                         <h3>Restaurants, bar and cafe</h3>
                         <p>Stylish atmosphere, the quality service and a variety of special selected dishes.</p>
-                        <a href="venues.html"><button class="btn btn-danger btn-outline">READ MORE</button></a>
+                        <a href="{{ path('view_venues') }}"><button class="btn btn-danger btn-outline">READ MORE</button></a>
                     </div>
                     <div class="col-md-6 col-sm-12 custom-col">
                         <img src="img/home-venues.jpg" alt="img" class="img-thumbnail">
@@ -111,7 +111,7 @@
                         <hr />
                         <h3>Sauna and pools</h3>
                         <p>SPA & Wellness center of the hotel offers harmonious and a healthy environment.</p>
-                        <a href="spa-center.html"><button class="btn btn-danger btn-outline">READ MORE</button></a>
+                        <a href="{{ path('view_relax_zone') }}"><button class="btn btn-danger btn-outline">READ MORE</button></a>
                     </div>
                 </div>
             </div>
