--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -14,7 +14,7 @@ body {
     color: #ffffff;
     background: #dc3545;
 }
-.stay-room {
+.cl-bold {
     font-weight: bold;
 }
 /* html, body end */
