--- a/app/Resources/views/admin/bookings/list.html.twig
+++ b/app/Resources/views/admin/bookings/list.html.twig
@@ -28,8 +28,8 @@
                             <td>{{ booking.checkout|date("Y-m-d") }}</td>
                             <td>{{ booking.status }}</td>
                             <td>
-                                <a href="{{ path('admin_booking_view', {id: booking.id}) }}">View</a>
-                                <a href="{{ path('admin_booking_edit', {id: booking.id}) }}">Edit</a>
+                                <a href="{{ path('admin_booking_view', {id: booking.id}) }}" target=_blank>View</a>
+                                <a href="{{ path('admin_booking_edit', {id: booking.id}) }}" target=_blank>Edit</a>
                                 <a href="{{ path('admin_booking_delete', {id: booking.id}) }}">Delete</a>
                             </td>
                         </tr>
