--- a/app/Resources/views/events/view.html.twig
+++ b/app/Resources/views/events/view.html.twig
@@ -39,7 +39,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-12">
                 <div class="info">
-                    <a class="event-link" href="index.html">Rooms and apartments</a>
+                    <a class="event-link" href="{{ path('hotel_index') }}">Rooms and apartments</a>
                     <p>They are designed for connoisseurs of luxury, which offer an exceptionally refined atmosphere and specially selected services.</p>
                 </div>
                 <img src="img/apartment-super-L.jpg" alt="img" class="img-thumbnail">
@@ -47,13 +47,13 @@
             <div class="col-md-4 col-sm-12">
                 <img src="img/cocktails.jpg" alt="img" class="img-thumbnail">
                 <div class="info">
-                    <a class="event-link" href="venues.html">Restaurants and bars</a>
+                    <a class="event-link" href="{{ path('view_venues') }}">Restaurants and bars</a>
                     <p>You will receive quality service in a stylish atmosphere. Our specialists will help you organize various events.</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-12">
                 <div class="info">
-                    <a class="event-link" href="spa-center.html">SPA & Wellness</a>
+                    <a class="event-link" href="{{ path('view_relax_zone') }}">SPA & Wellness</a>
                     <p>SPA & Wellness center offers harmonious and a healthy environment where you can rest, relax and feel rejuvenated.</p>
                 </div>
                 <img src="img/spa-and-wellness.jpg" alt="img" class="img-thumbnail">
