--- a/app/Resources/views/offers/view.html.twig
+++ b/app/Resources/views/offers/view.html.twig
@@ -22,7 +22,7 @@
                         <h4>Summer 2021 in Hotel & SPA</h4>
                         <p>June 2021 - July 2021</p>
                         <p>Early bookings with up to -25% discount</p>
-                        <p><a href="contact.html" style="">For info and reservation</a></p>
+                        <p><a href="{{ path('view_contact') }}">For info and reservation</a></p>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                         <h4>Business and family events</h4>
                         <p>01 January 2021 - 31 December 2021</p>
                         <p>Offer from for organizing your event</p>
-                        <p><a href="contact.html" style="">For info and reservation</a></p>
+                        <p><a href="{{ path('view_contact') }}">For info and reservation</a></p>
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                         <h4>Prom 2021 in Hotel & SPA</h4>
                         <p>01 May 2021 - 31 May 2021</p>
                         <p>An unforgettable experience in the hotel</p>
-                        <p><a href="contact.html" style="">For info and reservation</a></p>
+                        <p><a href="{{ path('view_contact') }}">For info and reservation</a></p>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                         <h4>Wedding celebration</h4>
                         <p>01 May 2021 - 30 Sep 2021</p>
                         <p>Offer from for organizing your wedding</p>
-                        <p><a href="contact.html" style="">For info and reservation</a></p>
+                        <p><a href="{{ path('view_contact') }}">For info and reservation</a></p>
                     </div>
                 </div>
             </div>
